<resources>
    <string name="app_name">Nothing</string>
    <string name="suibiankankan">随便看看</string>
    <string name="orUseThirdLogin">或者使用以下社交帐号登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号</string>
    <string name="identify_code">验证码</string>
    <string name="get_identify">获取验证码</string>
    <string name="password">密码</string>
    <string name="forgetPassWord">忘记密码？</string>
    <string name="renqibang">人气榜</string>
    <string name="getMore"><![CDATA[查看更多 >]]></string>
    <string name="search_hint">搜索全面升级，超级好用</string>
    <string name="hot_tag">热门标签</string>
    <string name="more"><![CDATA[更多 >]]></string>
    <string name="find_user">找博主</string>
    <string name="filter">筛选</string>
    <string name="filter_info">根据您的身高，性别和感兴趣的风格进行推荐</string>
    <string name="follow">关注</string>
    <string name="hour_rank_24">24小时榜</string>
    <string name="sex_filter">性别筛选</string>
    <string name="dapei">搭配</string>
    <string name="bloger">博主</string>
    <string name="all">全部</string>
    <string name="search_product">搜索单品</string>
    <string name="hot_product">人气单品</string>
    <string name="hot_product_box">推荐品牌</string>
    <string name="grass_product">推荐单品</string>
    <string name="user_wearing">博主都在穿</string>
    <string name="grass_shop">博主店铺推荐</string>
    <string name="more_shop">更多博主店铺</string>
    <string name="newest">最新</string>
    <string name="hottest">最热</string>
    <string name="new_master_match">新人搭配榜</string>
    <string name="week_match">周搭配榜</string>
    <string name="month_match">月搭配榜</string>
    <string name="master_total_rank">博主总榜</string>
    <string name="grass_match">推荐搭配</string>
    <string name="qiehuanbiaqian">点击切换兴趣标签</string>
    <string name="rank_month">月榜</string>
    <string name="rank_week">周榜</string>
    <string name="cancel">取消</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="filter_master">筛选博主</string>
    <string name="sure">确定</string>
    <string name="resend">秒后重新发送</string>
    <string name="sccuess">成功</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">历史搜索</string>
    <string name="clear_history">清除记录</string>
    <string name="search_info">搜索搭配，单品，用户</string>
    <string name="haitao">海淘</string>
    <string name="taobao">淘宝</string>
</resources>
