<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:divider="@drawable/linnear_divider"
    android:showDividers="middle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:padding="@dimen/dp_8"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:id="@+id/tv_all"
        android:text="@string/all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:padding="@dimen/dp_8"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:id="@+id/tv_male"
        android:text="@string/male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:padding="@dimen/dp_8"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:id="@+id/tv_female"
        android:text="@string/female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/gray_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"/>
    <TextView
        android:padding="@dimen/dp_8"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="@dimen/sp_18"
        android:id="@+id/tv_cancel"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>