<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:divider="@drawable/linnear_divider"
    android:showDividers="middle"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:gravity="center"
        android:text="@string/filter_master"
        android:padding="@dimen/dp_8"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/view_tag_filter"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_cancel"
            android:gravity="center"
            android:text="@string/cancel"
            android:padding="@dimen/dp_8"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_sure"
            android:gravity="center"
            android:text="@string/sure"
            android:padding="@dimen/dp_10"
            android:background="@color/orange_dark"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>