<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_search"
        android:drawablePadding="@dimen/dp_5"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/ic_search"
        android:textSize="@dimen/sp_15"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:text="@string/search_hint"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@android:color/holo_orange_dark"
                        android:text="@string/hot_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_moreHotTag"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:layout_alignParentEnd="true"
                        android:textColor="@android:color/holo_orange_dark"
                        android:text="@string/more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <android.support.v7.widget.RecyclerView
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_below="@+id/tv_moreHotTag"
                        android:id="@+id/tagRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@android:color/holo_orange_dark"
                        android:text="@string/find_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableEnd="@drawable/ic_filter"
                        android:id="@+id/tv_filter"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:layout_alignParentEnd="true"
                        android:textColor="@android:color/holo_orange_dark"
                        android:text="@string/filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_below="@+id/tv_filter"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/filter_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <android.support.v7.widget.RecyclerView
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:id="@+id/userRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>