<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_marginTop="@dimen/dp_120"
    android:clipChildren="false"
    android:id="@+id/view_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:showDividers="middle"
        android:divider="@drawable/linnear_divider"
        android:id="@+id/ll_login_register"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@android:color/transparent"
            android:textSize="@dimen/sp_18"
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:background="@android:color/transparent"
            android:textSize="@dimen/sp_18"
            android:text="@string/register"
            android:id="@+id/btn_register"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <RelativeLayout
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ll_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:id="@+id/view_input_login"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_phoneNum"
                android:hint="@string/phone_number"
                android:inputType="phone"
                style="@style/LoginEditText"/>

            <LinearLayout
                android:id="@+id/ll_identify_code"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:maxLength="4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_identifyCode"
                    android:hint="@string/identify_code"
                    android:inputType="number"
                    style="@style/LoginEditText"/>
                <TextView
                    android:id="@+id/tv_getIdentifyCode"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/get_identify"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    style="@style/LoginEditText"/>

                <TextView
                    android:id="@+id/tv_forgetPassWord"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/forgetPassWord"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login_register"
                android:layout_marginTop="@dimen/dp_20"
                android:textSize="@dimen/sp_15"
                android:background="@drawable/btn_round_black_bg"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40" />
        </LinearLayout>


        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15"
            android:layout_marginBottom="@dimen/dp_10"
            android:gravity="center"
            android:layout_above="@+id/thirdLoginView"
            android:text="@string/orUseThirdLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/thirdLoginView"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/iv_weChat"
                android:src="@drawable/wechat_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_60" />
            <ImageView
                android:id="@+id/iv_weibo"
                android:src="@drawable/weibo_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_60" />
            <ImageView
                android:id="@+id/iv_qq"
                android:src="@drawable/youku"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_60" />
            <Space
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>