<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_normal_titlebar"/>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/re_product"
                    layout="@layout/view_product_menu"/>

                <TextView
                    android:textSize="@dimen/sp_15"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/dp_15"
                    android:text="@string/grass_shop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40" />
                <View
                    android:background="@drawable/bg_divider_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <include
                    android:id="@+id/re_shop"
                    layout="@layout/view_product_menu"/>

                <TextView
                    android:id="@+id/tv_more_shop"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColor="@color/orange_dark"
                    android:padding="@dimen/dp_8"
                    android:text="@string/more_shop"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_stroke_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/sp_15"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/dp_15"
                    android:text="@string/grass_product"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30" />
                <android.support.design.widget.TabLayout
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabTextColor="@color/gray"

                    app:tabSelectedTextColor="@color/orange_dark">

                    <android.support.design.widget.TabItem
                        android:text="@string/newest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.TabItem
                        android:text="@string/hottest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TabLayout>

                <include
                    android:id="@+id/re_grass_product"
                    layout="@layout/view_product_menu"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>