<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:divider="@drawable/linnear_divider"
    android:showDividers="middle"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/round_bg_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/dp_20"
            android:id="@+id/ed_search"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@drawable/ic_search"
            android:textSize="@dimen/sp_15"
            android:gravity="center"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/search_info"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/ll_hotWords"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/hot_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flex_hot_words"
            app:flexWrap="wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="@color/gray_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"/>
    <FrameLayout
        android:id="@+id/fr_history"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_history"
            android:layout_gravity="start|center_vertical"
            android:text="@string/search_history"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:background="@android:color/transparent"
            android:id="@+id/btn_clearHistory"
            android:layout_gravity="end|center_vertical"
            android:text="@string/clear_history"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <ListView
        android:id="@+id/list_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:divider="@drawable/linnear_divider" />
</LinearLayout>